--- a/styles/sass/layout/_videos.scss
+++ b/styles/sass/layout/_videos.scss
@@ -12,8 +12,8 @@
 
         .thumbnail {
             position: relative;
-            height: 40%;
             width: 100%;
+            aspect-ratio: 16 / 9;
 
             .time {
                 position: absolute;
