--- a/styles/sass/abstract/_variables.scss
+++ b/styles/sass/abstract/_variables.scss
@@ -17,6 +17,7 @@ $secodary-font-family: notosans;
 $main-font-color: #030303;
 $secondary-font-color: #606060;
 $sign-link-font-color: #1a73e8;
+$sign-link-hover-font-color: #155bb6;
 $sign-secondary-font-color: #5f6368;
 
 // BORDER COLORS
