--- a/styles/sass/layout/_sign.scss
+++ b/styles/sass/layout/_sign.scss
@@ -21,6 +21,34 @@
             margin-top: 20px;
             width: 100%;
 
+            .options {
+                position: relative;
+                height: 100px;
+
+                a, p {
+                    position: absolute;
+                    display: inline-block;
+                    margin: 0;
+                }
+                a {
+                    bottom: 0;
+                    left: 9%;
+                }
+                p {
+                    padding: 8px 24px;
+                    border-radius: 5px;
+                    color: white;
+                    background-color: $sign-link-font-color;
+                    bottom: -10%;
+                    right: 9%;
+
+                    &:hover {
+                        cursor: pointer;
+                        background-color: $sign-link-hover-font-color;
+                        box-shadow: .5px .5px 3px black;
+                    }
+                }
+            }
             input[type=email] {
                 width: 75%;
                 font-size: 16px;
@@ -71,6 +99,29 @@
             
             img {
                 width: 75px;
+            }
+        }
+        .outside {
+            width: 448px;
+            position: absolute;
+            bottom: -40px;
+            font-size: 12px;
+
+            select {
+                cursor: pointer;
+                float: left;
+                border: none;
+                background-color: transparent;
+            }
+            a {
+                cursor: pointer;
+                color: $sign-secondary-font-color;
+                padding: 5px 10px;
+                display: inline-block;
+                text-decoration: none;
+            }
+            .right {
+                float: right;
             }
         }
     }
