--- a/styles/sass/layout/_sign.scss
+++ b/styles/sass/layout/_sign.scss
@@ -25,7 +25,7 @@
                 position: relative;
                 height: 100px;
 
-                a, p {
+                a, p, input[type=submit] {
                     position: absolute;
                     display: inline-block;
                     margin: 0;
@@ -34,7 +34,7 @@
                     bottom: 0;
                     left: 9%;
                 }
-                p {
+                p, input[type=submit] {
                     padding: 8px 24px;
                     border-radius: 5px;
                     color: white;
@@ -48,8 +48,13 @@
                         box-shadow: .5px .5px 3px black;
                     }
                 }
+                input[type=submit] {
+                    text-align: center;
+                    font-size: 14px;
+                    width: fit-content;
+                }
             }
-            input[type=email] {
+            input {
                 width: 75%;
                 font-size: 16px;
                 padding: 13px 15px;
@@ -122,6 +127,68 @@
             }
             .right {
                 float: right;
+            }
+        }
+        &.sign-up {
+            text-align: left;
+            height: 604px;
+
+            form {
+                margin-right: 9%;
+                width: 82%;
+
+                a {
+                    font-weight: normal;
+                }
+                p, a {
+                    margin-left: 0;
+                }
+                .comment {
+                    margin-left: 10px;
+                    margin-top: 5px;
+                    font-size: 10px;
+                }
+                .inline {
+                    text-align: center;
+
+                    input {
+                        display: inline-block;
+                        width: 43.5%;
+                    }
+                    &.margin {
+                        margin-top: 40px;
+                    }
+                }
+                .long {
+                    margin-top: 20px;
+                }
+                input {
+                    width: 94%;
+                    padding: 6px 8px;
+                }
+                .options {
+                    a {
+                        left: 0;     
+                    }
+                    p, input[type=submit] {
+                        right: 0;
+                    }
+                }
+                input[type=checkbox] {
+                    margin-top: 20px;
+                    width: fit-content;
+                    display: inline-block;
+                }
+                label {
+                    margin-left: 10px;
+                    font-size: 14px;
+                }
+            }
+            &>*:not(.outside) {
+                margin-left: 9%;
+            }
+            .logo {
+                text-align: left;
             }
         }
     }
