--- a/styles/sass/layout/_sign.scss
+++ b/styles/sass/layout/_sign.scss
@@ -145,7 +145,14 @@
             top: 27.5%;
             transform: translate(-50%, -50%);
             border-radius: 100vw;
-        //    border: 1px solid ;
+            border: 2px solid $lighter-main-border-color;
+            padding: 5px 7.5px;
+            color: $sign-secondary-font-color;
+            font-size: 14px;
+
+            &:hover {
+                cursor: pointer;
+            }
         }
         &.sign-up {
             text-align: left;
@@ -207,6 +214,40 @@
             }
             .logo {
                 text-align: left;
+            }
+        }
+    }
+}
+@media (max-width: 600px) {
+    .sign-section {
+        overflow: hidden;
+        .sign-box {
+            width: 100%;
+            height: 100%;
+            border: 2px solid transparent;
+            top: 50%;
+
+            .outside {
+                width: 90%;
+                bottom: 20px;
+                padding: 5%;
+            }
+            &.sign-up {
+                height: 100%;
+
+                form {
+                    text-align: center;
+
+                    .inline {
+                        input {
+                            margin-top: 20px;
+                            width: 94%;  
+                        }
+                        &.margin {
+                            margin-top: 20px;
+                        }
+                    }
+                }
             }
         }
     }
