--- a/styles/sass/layout/_sign.scss
+++ b/styles/sass/layout/_sign.scss
@@ -52,6 +52,10 @@
                     text-align: center;
                     font-size: 14px;
                     width: fit-content;
+
+                    &:disabled {
+                        opacity: 0.5;
+                    }
                 }
             }
             input {
