--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -251,18 +251,65 @@ header {
     animation-name: hamburgerClicked;
     animation-duration: 1s; }
   header .profile {
-    width: 20%;
-    height: fit-content;
-    padding-bottom: 20px;
+    width: 300px;
     position: absolute;
-    left: 80%;
-    top: 100%;
+    height: fit-content;
+    right: -6%;
+    top: 675%;
+    transform: translate(-50%, -50%);
     margin-top: 0;
     background-color: white;
     border: 1px solid #d5d5d5;
     border-top: none;
-    z-index: 2;
-    text-align: center; }
+    z-index: 2; }
+    header .profile .top {
+      border-bottom: 1px solid #d5d5d5;
+      padding: 15px; }
+      header .profile .top h1, header .profile .top a {
+        display: inline-block; }
+      header .profile .top a {
+        text-decoration: none;
+        color: #1a73e8;
+        font-size: 14px;
+        margin-top: 15px; }
+      header .profile .top h1 {
+        margin-top: 2px;
+        font-size: 16px; }
+      header .profile .top img {
+        float: left;
+        display: inline-block;
+        margin-right: 15px;
+        width: 45px;
+        height: 45px;
+        border-radius: 50%; }
+    header .profile .item {
+      display: block;
+      cursor: pointer;
+      position: relative;
+      padding-left: 30px;
+      padding-top: 10px;
+      padding-bottom: 10px; }
+      header .profile .item:hover {
+        background-color: #d5d5d5; }
+      header .profile .item p {
+        padding-top: 0;
+        margin-right: 0;
+        margin-left: 25px;
+        display: inline-block;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%); }
+      header .profile .item .icon {
+        position: relative;
+        display: inline-block;
+        font-size: 20px; }
+        header .profile .item .icon i {
+          width: 23px;
+          max-width: 23px; }
+      header .profile .item.active {
+        background-color: #d5d5d5; }
+        header .profile .item.active p {
+          font-weight: bold; }
 
 @keyframes hamburgerClicked {
   0% {
