menu order changed

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -298,7 +298,8 @@ header {
         display: inline-block;
         position: absolute;
         top: 50%;
-        transform: translateY(-50%); }
+        transform: translateY(-50%);
+        font-size: 14px; }
       header .profile .item .icon {
         position: relative;
         display: inline-block;
