--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -385,6 +385,7 @@ header {
                 position: absolute;
                 top: 50%;
                 transform: translateY(-50%);
+                font-size: 14px;
             }
             .icon {
                 position: relative;
