--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -742,6 +742,64 @@ footer {
           .sign-section .sign-box.sign-up form .inline.margin {
             margin-top: 20px; } }
 
+.create-page {
+  background-color: black;
+  font-family: roboto; }
+  .create-page .create-section {
+    width: 100%;
+    height: 100%;
+    position: absolute; }
+    .create-page .create-section .create-box {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      background-color: white;
+      width: 960px;
+      height: 915px;
+      border-radius: 7px; }
+      .create-page .create-section .create-box .top {
+        padding: 20px;
+        border-bottom: 1px solid #d5d5d5; }
+        .create-page .create-section .create-box .top .btn {
+          float: right;
+          font-size: 22px;
+          margin-left: 20px; }
+        .create-page .create-section .create-box .top h1 {
+          display: inline-block;
+          font-size: 20px;
+          font-weight: normal; }
+      .create-page .create-section .create-box .mid {
+        text-align: center;
+        position: relative;
+        height: 850px; }
+        .create-page .create-section .create-box .mid h2 {
+          font-size: 15px;
+          margin-bottom: 5px; }
+        .create-page .create-section .create-box .mid p {
+          font-size: 13px; }
+        .create-page .create-section .create-box .mid .info {
+          position: absolute;
+          top: 55%;
+          left: 50%;
+          transform: translate(-50%, -50%); }
+        .create-page .create-section .create-box .mid .upload {
+          position: absolute;
+          top: 40%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          display: block;
+          border-radius: 50%;
+          background-color: #e6e6e6;
+          font-size: 65px;
+          width: 100px;
+          height: 100px; }
+          .create-page .create-section .create-box .mid .upload i {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%); }
+
 * {
   scroll-behavior: smooth;
   color: #030303;
