--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -765,6 +765,10 @@ footer {
           float: right;
           font-size: 22px;
           margin-left: 20px; }
+          .create-page .create-section .create-box .top .btn i {
+            color: #606060; }
+          .create-page .create-section .create-box .top .btn:hover i {
+            color: black; }
         .create-page .create-section .create-box .top h1 {
           display: inline-block;
           font-size: 20px;
@@ -783,22 +787,23 @@ footer {
           top: 55%;
           left: 50%;
           transform: translate(-50%, -50%); }
-        .create-page .create-section .create-box .mid .upload {
+        .create-page .create-section .create-box .mid .upload-input {
           position: absolute;
           top: 40%;
           left: 50%;
           transform: translate(-50%, -50%);
           display: block;
           border-radius: 50%;
-          background-color: #e6e6e6;
-          font-size: 65px;
+          background-image: url(../../media/upload.svg);
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-position: center;
           width: 100px;
-          height: 100px; }
-          .create-page .create-section .create-box .mid .upload i {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%); }
+          height: 100px;
+          border: 1px solid #e6e6e6;
+          font-size: 0; }
+          .create-page .create-section .create-box .mid .upload-input:hover {
+            cursor: pointer; }
 
 * {
   scroll-behavior: smooth;
