--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -25,6 +25,15 @@
                     float: right;
                     font-size: 22px;
                     margin-left: 20px;
+
+                    i {
+                        color: $secondary-font-color;
+                    }
+                    &:hover {
+                        i {
+                            color: black;
+                        }
+                    }
                 }
                 h1 {
                     display: inline-block;
@@ -50,23 +59,24 @@
                     left: 50%;
                     transform: translate(-50%, -50%);
                 }
-                .upload {
+                .upload-input {
                     position: absolute;
                     top: 40%;
                     left: 50%;
                     transform: translate(-50%, -50%);
                     display: block;
                     border-radius: 50%;
-                    background-color: $lighter-main-border-color;
-                    font-size: 65px;
+                    background-image: url(../../media/upload.svg);
+                    background-repeat: no-repeat;
+                    background-attachment: fixed;
+                    background-position: center;
                     width: 100px;
                     height: 100px;
+                    border: 1px solid $lighter-main-border-color;
+                    font-size: 0;
 
-                    i {
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%);
+                    &:hover {
+                        cursor: pointer;
                     }
                 }
             }
