--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -758,6 +758,10 @@ footer {
       width: 960px;
       height: 915px;
       border-radius: 7px; }
+      .create-page .create-section .create-box h1 {
+        display: inline-block;
+        font-size: 20px;
+        font-weight: normal; }
       .create-page .create-section .create-box .top {
         padding: 20px;
         border-bottom: 1px solid #d5d5d5; }
@@ -769,14 +773,14 @@ footer {
             color: #606060; }
           .create-page .create-section .create-box .top .btn:hover i {
             color: black; }
-        .create-page .create-section .create-box .top h1 {
-          display: inline-block;
-          font-size: 20px;
-          font-weight: normal; }
       .create-page .create-section .create-box .mid {
         text-align: center;
         position: relative;
         height: 850px; }
+        .create-page .create-section .create-box .mid #error {
+          margin-top: 5px;
+          margin-bottom: 5px;
+          color: red; }
         .create-page .create-section .create-box .mid h2 {
           font-size: 15px;
           margin-bottom: 5px; }
@@ -804,6 +808,19 @@ footer {
           font-size: 0; }
           .create-page .create-section .create-box .mid .upload-input:hover {
             cursor: pointer; }
+        .create-page .create-section .create-box .mid .timeline {
+          height: 80px;
+          width: 912px;
+          margin-left: 24px;
+          margin-right: 24px; }
+        .create-page .create-section .create-box .mid .details {
+          height: 718px;
+          padding-left: 50px;
+          padding-right: 50px;
+          float: left; }
+          .create-page .create-section .create-box .mid .details h1 {
+            font-weight: bold;
+            font-size: 25px; }
 
 * {
   scroll-behavior: smooth;
