--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -17,6 +17,11 @@
             height: 915px;
             border-radius: 7px;
 
+            h1 {
+                display: inline-block;
+                font-size: 20px;
+                font-weight: normal;
+            }
             .top {
                 padding: 20px;
                 border-bottom: 1px solid $main-border-color;
@@ -35,17 +40,17 @@
                         }
                     }
                 }
-                h1 {
-                    display: inline-block;
-                    font-size: 20px;
-                    font-weight: normal;
-                }
             }
             .mid {
                 text-align: center;
                 position: relative;
                 height: 850px;
 
+                #error {
+                    margin-top: 5px;
+                    margin-bottom: 5px;
+                    color: red;
+                }
                 h2 {
                     font-size: 15px;
                     margin-bottom: 5px;
@@ -77,6 +82,23 @@
 
                     &:hover {
                         cursor: pointer;
+                    }
+                }
+                .timeline {
+                    height: 80px;
+                    width: 912px;
+                    margin-left: 24px;
+                    margin-right: 24px;
+                }
+                .details {
+                    height: 718px;
+                    padding-left: 50px;
+                    padding-right: 50px;
+                    float: left;
+
+                    h1 {
+                        font-weight: bold;
+                        font-size: 25px;
                     }
                 }
             }
