--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -46,6 +46,9 @@
                 position: relative;
                 height: 850px;
 
+                form {
+                    height: 100%;
+                }
                 #error {
                     margin-top: 5px;
                     margin-bottom: 5px;
@@ -61,6 +64,11 @@
                     font-size: 12px;
                     color: $secondary-font-color;
                 }
+                a {
+                    font-size: 12px;
+                    text-decoration: none;
+                    color: $sign-link-font-color;
+                }
                 .info, .legal {
                     position: absolute;
                     transform: translate(-50%, -50%);
@@ -75,10 +83,6 @@
 
                     p {
                         margin-bottom: 10px;
-                    }
-                    a {
-                        color: $sign-link-font-color;
-                        text-decoration: none;
                     }
                 }
                 .upload-input {
@@ -101,21 +105,68 @@
                         cursor: pointer;
                     }
                 }
-                .timeline {
-                    height: 80px;
-                    width: 912px;
-                    margin-left: 24px;
-                    margin-right: 24px;
-                }
-                .details {
-                    height: 718px;
-                    padding-left: 50px;
-                    padding-right: 50px;
-                    float: left;
+                #details-stage {
+                    height: 797px;
+                    margin-left: 50px;
+                    margin-right: 50px;
 
-                    h1 {
-                        font-weight: bold;
-                        font-size: 25px;
+                    .timeline {
+                        height: 80px;
+                        width: 100%;
+                    }
+                    .details {
+                        height: 718px;
+                        width: 100%;
+                        float: left;
+    
+                        h1 {
+                            font-weight: bold;
+                            font-size: 25px;
+                        }
+                    }
+                }
+                .bottom {
+                    height: 20px;
+                    width: 940px;
+                    border-top: 1px solid $main-border-color;
+                    padding-top: 16.5px;
+                    padding-bottom: 16.5px;
+                    padding-left: 10px;
+                    padding-right: 10px;
+
+                    .left, .right {
+                        height: 100%;
+                        width: fit-content;
+                        position: relative;
+                    }
+                    .left {
+                        position: relative;
+                        display: inline-block;
+                        float: left;
+
+                        p {
+                            white-space: nowrap;
+                            position: absolute;
+                            top: 50%;
+                            left: 200%;
+                            transform: translate(-50%, -50%);
+                        }
+                        i {
+                            margin-left: 10px;
+                            font-size: 20px;
+                            color: $sign-link-font-color;
+                        }
+                    }
+                    .right {
+                        float: right;
+
+                        .btn {
+                            font-size: 14px;
+                            background-color: $sign-link-font-color;
+                            color: white;
+                            padding: 10px 15px;
+                            border-radius: 2px;
+                        }
                     }
                 }
             }
